@@ -1,3 +1,8 @@
+2006-02-16  Keith Packard  <keithp@keithp.com>
+
+	* miext/shadow/shrotpackYX.h:
+	Forgot to include this file in previous patch
+
 2006-02-15  Keith Packard  <keithp@keithp.com>
 
 	* Makefile.am:
